# RecipeWizard

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  resources.qrc
qml/: main.qml
qml/pages/: AddRecipePage.qml  CauldronPage.qml  CookingOverlay.qml  FavoritesPage.qml  HistoryPage.qml  HomePage.qml  LaboratoryPage.qml  RecipeCard.qml  RecipeDetailsPage.qml  SwipePage.qml
src/: DatabaseManager.cpp  DatabaseManager.h  Recipe.h  RecipeException.h  RecipeModel.cpp  RecipeModel.h  RecipeRepository.cpp  RecipeRepository.h  RecipeService.cpp  RecipeService.h  main.cpp
tests/: CMakeLists.txt  test_main.cpp
